secondfile/objects/Email_Event__c.object
<CustomObject>
    <description>Collab</description>
    <fields>
        <fullName>Added_to_Change_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added to Change Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Emails__c</fullName>
        <label>Additional Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Name__c</fullName>
        <label>Email Alert Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Object__c</fullName>
        <label>Email Alert Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Unique_Name__c</fullName>
        <label>Email Alert Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Event_Stage__c</fullName>
        <label>Email Event Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Deal Registration</fullName>
                </value>
                <value>
                    <fullName>Special Pricing</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Event_Type__c</fullName>
        <label>Email Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Start</fullName>
                </value>
                <value>
                    <fullName>MACD</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Template_Body__c</fullName>
        <label>Email Template Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Template_Name__c</fullName>
        <formula>Email_Template__r.Name</formula>
        <label>Email Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Subject__c</fullName>
        <formula>Email_Template__r.Subject__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Template Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Template</label>
        <referenceTo>Email_Template__c</referenceTo>
        <relationshipLabel>Email Events</relationshipLabel>
        <relationshipName>Email_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DevApril</fullName>
                </value>
                <value>
                    <fullName>TestApr</fullName>
                </value>
                <value>
                    <fullName>TestUAT</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Criteria__c</fullName>
        <label>Evaluation Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Flow__c</fullName>
        <label>Event Flow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EBM</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Email_Address__c</fullName>
        <label>From Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_Content_Update__c</fullName>
        <label>Need Content Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QC_ID__c</fullName>
        <label>QC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipients__c</fullName>
        <label>Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Setup_Link__c</fullName>
        <label>Setup Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Design Phase</fullName>
                </value>
                <value>
                    <fullName>Awaiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Dependent_Action__c</fullName>
        <label>Time-Dependent Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Dependent_Criteria__c</fullName>
        <label>Time Dependent Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <label>Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_ID__c</fullName>
        <label>US ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Active__c</fullName>
        <formula>TEXT( Workflow__r.Active__c )</formula>
        <label>Workflow Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Evaluation_Criteria__c</fullName>
        <formula>Workflow__r.Evaluation_Criteria__c</formula>
        <label>Workflow Evaluation Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Name__c</fullName>
        <formula>Workflow__r.Name</formula>
        <label>Workflow Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Object__c</fullName>
        <formula>Workflow__r.Object__c</formula>
        <label>Workflow Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow_Rule_Criteria__c</fullName>
        <label>Workflow Rule Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow</label>
        <referenceTo>Workflow__c</referenceTo>
        <relationshipLabel>Email Events</relationshipLabel>
        <relationshipName>Email_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Email Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EBM_Email_Events</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Flow__c</field>
            <operation>equals</operation>
            <value>EBM</value>
        </filters>
        <label>EBM: All Email Events</label>
    </listViews>
    <listViews>
        <fullName>EBM_MACD_Email_Events</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Flow__c</field>
            <operation>equals</operation>
            <value>EBM</value>
        </filters>
        <filters>
            <field>Email_Event_Type__c</field>
            <operation>equals</operation>
            <value>MACD</value>
        </filters>
        <label>EBM: MACD Email Events</label>
    </listViews>
    <listViews>
        <fullName>SP_Admin_Email_Events</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Flow__c</field>
            <operation>equals</operation>
            <value>SP</value>
        </filters>
        <filters>
            <field>Email_Event_Type__c</field>
            <operation>equals</operation>
            <value>Admin</value>
        </filters>
        <label>SP: Admin Email Events</label>
    </listViews>
    <listViews>
        <fullName>SP_Email_Events</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Flow__c</field>
            <operation>equals</operation>
            <value>SP</value>
        </filters>
        <label>SP: All Email Events</label>
    </listViews>
    <listViews>
        <fullName>SP_MACD_Email_Events</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Flow__c</field>
            <operation>equals</operation>
            <value>SP</value>
        </filters>
        <filters>
            <field>Email_Event_Type__c</field>
            <operation>equals</operation>
            <value>MACD</value>
        </filters>
        <label>SP: MACD Email Events</label>
    </listViews>
    <nameField>
        <label>Email Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Events</pluralLabel>
    <recordTypes>
        <fullName>Code_Email_Event</fullName>
        <active>true</active>
        <label>Code Email Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>System_Email_Event</fullName>
        <active>true</active>
        <label>System Email Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workflow_Email_Event</fullName>
        <active>true</active>
        <label>Workflow Email Event</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>